remove ugel images

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,19 @@
     "reduxjs",
     "Yasser"
   ],
-  "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5501,
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true
+  },
+  "hide-files.files": [],
+  "workbench.colorCustomizations": {
+    "statusBar.noFolderBackground": "#8a008f",
+    "statusBar.debuggingBackground": "#8a008f",
+    "statusBar.debuggingForeground": "#ffffff"
+  }
 }
